[package]
name = "pain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap-serde = "0.5.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["blocking", "json", "stream"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
webbrowser = "1.0.5"
